# anttp_android

./: .gitignore  .output.txt  Cargo.toml  README.md  REQUIREMENTS.md  build.gradle  local.properties  settings.gradle
.cargo/: config.toml
.junie/: guidelines.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/anttp/: MainActivity.kt  ProxyForegroundService.kt
app/src/main/java/uk/co/antnode/anttp/: MainActivity.kt  Native.kt  ProxyForegroundService.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/: gradle-daemon-jvm.properties
scripts/: build_native.sh
spec/: 00001_create_rust_library_packaging_for_android_cdylib.txt  00002_create_android_app_shell_kotlin_foreground_service.txt  00006_add_clean_shutdown_wiring_anttp_serverhandle_jni_stop.txt
src/: lib.rs
