[package]
name = "anttp_android"
version = "0.1.3"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
jni = "0.21"
tokio = { version = "1", features = ["full"] }
once_cell = "1"
anttp = { version = "0.25", default-features = false }
#anttp = { path = "../anttp", default-features = false }
clap = { version = "4.5", features = ["derive"] }
rmcp = { version = "=0.12.0", features = ["transport-streamable-http-server-session"] }
rmcp-actix-web = "=0.9.4"